--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <link rel="stylesheet" type="text/css" href="css/style.css">
             <!-- <style type="text/css"></style> -->
             <!-- <script src="https://kit.fontawesome.com/87e811ac08.js" crossorigin="anonymous"></script> -->
-            <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+            <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
+            <script src="scripts/jquery.js"></script>
             <script src="scripts/jquery.drawsvg.js"></script>
+            <script src="scripts/3deye.min.js"></script>
             <script src="scripts/script.js"></script>
         </head>
 
@@ -86,6 +88,7 @@
                     
 
             </div>
+            <div id="fotki"></div>
         </body>
 
 </html>
