--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
             <script src="scripts/jquery.js"></script>
             <script src="scripts/jquery.drawsvg.js"></script>
-            <script src="scripts/3deye.min.js"></script>
+            <script src="scripts/3deye.js"></script>
             <script src="scripts/script.js"></script>
         </head>
 
